--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
 
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>Página personalizada</title>
+  <script>
+    window.onload = function() {
+      window.location.href = "https://cmt.trabajadores.examenes";
+    }
+  </script>
+</head>
+<body>
+  <h1>Página personalizada</h1>
+  <p>Esta es mi página personalizada.</p>
+</body>
+</html>
